Disable calls to PyGILState_* when threads are disabled

Since threads may also be disabled in Python too, those symbols may not
be resolved.

https://bugzilla.gnome.org/show_bug.cgi?id=374603